--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
 <body>
     <header>
+        <!-- navbar -->
         <nav class=" conatainer mx-auto lg:px-26 lg:my-5">
             <div class="navbar px-10 lg:px-20  bg-white border-none shadow-none">
                 <div class="navbar-start">
@@ -53,6 +54,7 @@
                     <div class=" flex justify-center items-center">
                         <div class="flex justify-center items-center lg:hidden">
                             <img class="pt-1" src="Images/Vector.png" alt="">
+
                         </div>
                         <div>
                             <h1
@@ -78,9 +80,47 @@
                 </div>
             </div>
         </nav>
+
     </header>
     <main>
+        <div class="flex flex-col">
+            <div class="carousel container my-5 lg: w-[340px] mx-auto flex gap-2 rounded-lg lg:w-full">
+                <!-- slide 1 -->
+                <div id="slide1" class="carousel-item relative lg:px-20">
+                    <img src="Images/1.png" class="lg:h-[520px] h-[50vh] w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-28 right-28 top-1/2">
+                        <a href="#slide3" class="btn btn-circle bg-black border-black text-white">❮</a>
+                        <a href="#slide2" class="btn btn-circle bg-black border-black text-white">❯</a>
+                    </div>
+                </div>
+                <!-- slide 2 -->
+                <div id="slide2" class="carousel-item relative lg:px-20">
+                    <img src="Images/2.png" class="h-[200px] lg:h-[520px] lg:w-[1110px] w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-28 right-28 top-1/2">
+                        <a href="#slide1" class="btn btn-circle bg-black border-black text-white">❮</a>
+                        <a href="#slide3" class="btn btn-circle bg-black border-black text-white">❯</a>
+                    </div>
+                </div>
+                <!-- slide 3 -->
+                <div id="slide3" class="carousel-item relative lg:px-20">
+                    <img src="Images/3.png" class="h-[200px] lg:h-[520px] lg:w-[1110px] w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-28 right-28 top-1/2">
+                        <a href="#slide2" class="btn btn-circle bg-black border-black text-white">❮</a>
+                        <a href="#slide1" class="btn btn-circle bg-black border-black text-white">❯</a>
+                    </div>
+                </div>
 
+            </div>
+            <div
+                class="bg-black text-white conatainer mx-auto px-12 lg:px-26 lg:my-5 lg:absolute p-3 lg:p-6 lg:w-[550px] w-[350px] rounded-xl lg:translate-y-[345px] lg:translate-x-[600px]">
+                <h1 class="font-bold pb-2">Meet all the heroes from the field</h1>
+                <p class="opacity-70">
+                    Specify the field like: sports, science, medicine, humanitarian work etc to list heroes accurately.
+                </p>
+
+            </div>
+
+        </div>
     </main>
     <footer></footer>
 </body>
