add profetional section

--- a/index.html
+++ b/index.html
@@ -83,44 +83,112 @@
 
     </header>
     <main>
-        <div class="flex flex-col">
-            <div class="carousel container my-5 lg: w-[340px] mx-auto flex gap-2 rounded-lg lg:w-full">
-                <!-- slide 1 -->
-                <div id="slide1" class="carousel-item relative lg:px-20">
-                    <img src="Images/1.png" class="lg:h-[520px] h-[50vh] w-full" />
-                    <div class="absolute flex justify-between transform -translate-y-1/2 left-28 right-28 top-1/2">
-                        <a href="#slide3" class="btn btn-circle bg-black border-black text-white">❮</a>
-                        <a href="#slide2" class="btn btn-circle bg-black border-black text-white">❯</a>
+        <!-- banner section -->
+        <section>
+            <div class="flex flex-col">
+                <div class="carousel container my-5 lg: w-[340px] mx-auto flex gap-2 rounded-lg lg:w-full">
+                    <!-- slide 1 -->
+                    <div id="slide1" class="carousel-item relative lg:px-20">
+                        <img src="Images/1.png" class="lg:h-[520px] h-[50vh] w-full" />
+                        <div class="absolute flex justify-between transform -translate-y-1/2 left-28 right-28 top-1/2">
+                            <a href="#slide3" class="btn btn-circle bg-black border-black text-white">❮</a>
+                            <a href="#slide2" class="btn btn-circle bg-black border-black text-white">❯</a>
+                        </div>
                     </div>
+                    <!-- slide 2 -->
+                    <div id="slide2" class="carousel-item relative lg:px-20">
+                        <img src="Images/2.png" class="h-[200px] lg:h-[520px] lg:w-[1110px] w-full" />
+                        <div class="absolute flex justify-between transform -translate-y-1/2 left-28 right-28 top-1/2">
+                            <a href="#slide1" class="btn btn-circle bg-black border-black text-white">❮</a>
+                            <a href="#slide3" class="btn btn-circle bg-black border-black text-white">❯</a>
+                        </div>
+                    </div>
+                    <!-- slide 3 -->
+                    <div id="slide3" class="carousel-item relative lg:px-20">
+                        <img src="Images/3.png" class="h-[200px] lg:h-[520px] lg:w-[1110px] w-full" />
+                        <div class="absolute flex justify-between transform -translate-y-1/2 left-28 right-28 top-1/2">
+                            <a href="#slide2" class="btn btn-circle bg-black border-black text-white">❮</a>
+                            <a href="#slide1" class="btn btn-circle bg-black border-black text-white">❯</a>
+                        </div>
+                    </div>
+
                 </div>
-                <!-- slide 2 -->
-                <div id="slide2" class="carousel-item relative lg:px-20">
-                    <img src="Images/2.png" class="h-[200px] lg:h-[520px] lg:w-[1110px] w-full" />
-                    <div class="absolute flex justify-between transform -translate-y-1/2 left-28 right-28 top-1/2">
-                        <a href="#slide1" class="btn btn-circle bg-black border-black text-white">❮</a>
-                        <a href="#slide3" class="btn btn-circle bg-black border-black text-white">❯</a>
-                    </div>
-                </div>
-                <!-- slide 3 -->
-                <div id="slide3" class="carousel-item relative lg:px-20">
-                    <img src="Images/3.png" class="h-[200px] lg:h-[520px] lg:w-[1110px] w-full" />
-                    <div class="absolute flex justify-between transform -translate-y-1/2 left-28 right-28 top-1/2">
-                        <a href="#slide2" class="btn btn-circle bg-black border-black text-white">❮</a>
-                        <a href="#slide1" class="btn btn-circle bg-black border-black text-white">❯</a>
-                    </div>
+                <div
+                    class="bg-black text-white conatainer mx-auto px-12 lg:px-26 lg:my-5 lg:absolute p-3 lg:p-6 lg:w-[550px] w-[350px] rounded-xl lg:translate-y-[345px] lg:translate-x-[600px]">
+                    <h1 class="font-bold pb-2">Meet all the heroes from the field</h1>
+                    <p class="opacity-70">
+                        Specify the field like: sports, science, medicine, humanitarian work etc to list heroes
+                        accurately.
+                    </p>
+
                 </div>
 
             </div>
-            <div
-                class="bg-black text-white conatainer mx-auto px-12 lg:px-26 lg:my-5 lg:absolute p-3 lg:p-6 lg:w-[550px] w-[350px] rounded-xl lg:translate-y-[345px] lg:translate-x-[600px]">
-                <h1 class="font-bold pb-2">Meet all the heroes from the field</h1>
-                <p class="opacity-70">
-                    Specify the field like: sports, science, medicine, humanitarian work etc to list heroes accurately.
+        </section>
+
+        <!-- professional section -->
+        <section class="lg:mx-20 py-14">
+            <div class="containar mx-auto px-26 w-3/4">
+                <h1 class="text-2xl lg:text-4xl font-bold text-center pb-6">
+                    Professional Hockeys Club
+                </h1>
+                <p class="opacity-70 text-center">
+                    Professional hockey clubs, also known as ice hockey teams, compete globally in leagues like the NHL
+                    and KHL. Comprising players, coaches, and staff, these teams boast rich histories, loyal fans, and
+                    intense rivalries, striving for success on the ice.
                 </p>
+            </div>
+            <!-- percentage -->
+            <div class="flex justify-center items-center gap-8 pt-12">
+                <div class="flex flex-col justify-center items-center ">
+                    <div class="radial-progress text-[#FF4240]" style="--value:87;" role="progressbar"> <span
+                            class="text-black text-sl font-bold">87%</span> </div>
+                    <div class="pt-7">
+                        <h1 class="text-xl font-semibold text-center">Prayer Facility</h1>
+                        <p class="opacity-70 text-center ">
+                            A prayer facility provides a serene space for individuals to engage in spiritual reflection
+                            and worship.
+                        </p>
+                    </div>
+                </div>
+                <div class="flex flex-col justify-center items-center ">
+                    <div class="radial-progress text-[#49D293]" style="--value:95;" role="progressbar"> <span
+                            class="text-black text-sl font-bold">95%</span> </div>
+                    <div class="pt-7">
+                        <h1 class="text-xl font-semibold text-center">Experienced Coach</h1>
+                        <p class="opacity-70 text-center ">
+                            A prayer facility provides a serene space for individuals to engage in spiritual reflection
+                            and worship.
+                        </p>
+                    </div>
+                </div>
+                <div class="flex flex-col justify-center items-center ">
+                    <div class="radial-progress text-[#FFB546]" style="--value:90;" role="progressbar"> <span
+                            class="text-black text-sl font-bold">90%</span> </div>
+                    <div class="pt-7">
+                        <h1 class="text-xl font-semibold text-center">Senior Player</h1>
+                        <p class="opacity-70 text-center ">
+                            A prayer facility provides a serene space for individuals to engage in spiritual reflection
+                            and worship.
+                        </p>
+                    </div>
+                </div>
+                <div class="flex flex-col justify-center items-center ">
+                    <div class="radial-progress text-[#4C8DF1]" style="--value:80;" role="progressbar"> <span
+                            class="text-black text-sl font-bold">80%</span> </div>
+                    <div class="pt-7">
+                        <h1 class="text-xl font-semibold text-center">Training Ground</h1>
+                        <p class="opacity-70 text-center ">
+                            A prayer facility provides a serene space for individuals to engage in spiritual reflection
+                            and worship.
+                        </p>
+                    </div>
+                </div>
+
+
 
             </div>
-
-        </div>
+        </section>
     </main>
     <footer></footer>
 </body>
