--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <!-- banner section -->
         <section>
             <div class="flex flex-col">
-                <div class="carousel container my-5 lg: w-[340px] mx-auto flex gap-2 rounded-lg lg:w-full">
+                <div class="carousel container mt-4 lg: w-[340px] mx-auto flex gap-2 rounded-lg lg:w-full">
                     <!-- slide 1 -->
                     <div id="slide1" class="carousel-item relative lg:px-20">
                         <img src="Images/1.png" class="lg:h-[520px] h-[50vh] w-full" />
@@ -114,7 +114,7 @@
 
                 </div>
                 <div
-                    class="bg-black text-white conatainer mx-auto px-12 lg:px-26 lg:my-5 lg:absolute p-3 lg:p-6 lg:w-[550px] w-[350px] rounded-xl lg:translate-y-[345px] lg:translate-x-[600px]">
+                    class="mt-2 bg-black text-white conatainer mx-auto px-12 lg:px-26 lg:my-5 lg:absolute p-3 lg:p-6 lg:w-[550px] w-[350px] rounded-xl lg:translate-y-[345px] lg:translate-x-[600px]">
                     <h1 class="font-bold pb-2">Meet all the heroes from the field</h1>
                     <p class="opacity-70">
                         Specify the field like: sports, science, medicine, humanitarian work etc to list heroes
@@ -139,12 +139,12 @@
                 </p>
             </div>
             <!-- percentage -->
-            <div class="flex justify-center items-center gap-8 pt-12">
+            <div class="flex flex-col lg:flex-row justify-center items-center gap-8 pt-12">
                 <div class="flex flex-col justify-center items-center ">
                     <div class="radial-progress text-[#FF4240]" style="--value:87;" role="progressbar"> <span
                             class="text-black text-sl font-bold">87%</span> </div>
-                    <div class="pt-7">
-                        <h1 class="text-xl font-semibold text-center">Prayer Facility</h1>
+                    <div class="pt-5 px-5 lg:px-0">
+                        <h1 class="text-xl font-semibold text-center pb-4">Prayer Facility</h1>
                         <p class="opacity-70 text-center ">
                             A prayer facility provides a serene space for individuals to engage in spiritual reflection
                             and worship.
@@ -154,8 +154,8 @@
                 <div class="flex flex-col justify-center items-center ">
                     <div class="radial-progress text-[#49D293]" style="--value:95;" role="progressbar"> <span
                             class="text-black text-sl font-bold">95%</span> </div>
-                    <div class="pt-7">
-                        <h1 class="text-xl font-semibold text-center">Experienced Coach</h1>
+                    <div class="pt-5 px-5 lg:px-0">
+                        <h1 class="text-xl font-semibold text-center pb-4">Experienced Coach</h1>
                         <p class="opacity-70 text-center ">
                             A prayer facility provides a serene space for individuals to engage in spiritual reflection
                             and worship.
@@ -165,8 +165,8 @@
                 <div class="flex flex-col justify-center items-center ">
                     <div class="radial-progress text-[#FFB546]" style="--value:90;" role="progressbar"> <span
                             class="text-black text-sl font-bold">90%</span> </div>
-                    <div class="pt-7">
-                        <h1 class="text-xl font-semibold text-center">Senior Player</h1>
+                    <div class="pt-5 px-5 lg:px-0">
+                        <h1 class="text-xl font-semibold text-center pb-4">Senior Player</h1>
                         <p class="opacity-70 text-center ">
                             A prayer facility provides a serene space for individuals to engage in spiritual reflection
                             and worship.
@@ -176,8 +176,8 @@
                 <div class="flex flex-col justify-center items-center ">
                     <div class="radial-progress text-[#4C8DF1]" style="--value:80;" role="progressbar"> <span
                             class="text-black text-sl font-bold">80%</span> </div>
-                    <div class="pt-7">
-                        <h1 class="text-xl font-semibold text-center">Training Ground</h1>
+                    <div class="pt-5 px-5 lg:px-0">
+                        <h1 class="text-xl font-semibold text-center pb-4">Training Ground</h1>
                         <p class="opacity-70 text-center ">
                             A prayer facility provides a serene space for individuals to engage in spiritual reflection
                             and worship.
