add program section

--- a/index.html
+++ b/index.html
@@ -189,6 +189,87 @@
 
             </div>
         </section>
+
+        <!-- professional section -->
+        <section class="lg:mx-20 py-14">
+            <div class="containar mx-auto px-26 w-3/4">
+                <h1 class="text-2xl lg:text-4xl font-bold text-center pb-6">
+                    Program Sections
+                </h1>
+                <p class="opacity-70 text-center">
+                    Professional hockey clubs, also known as ice hockey teams, compete globally in leagues like the NHL
+                    and KHL. Comprising players, coaches, and staff, these teams boast rich histories, loyal fans, and
+                    intense rivalries, striving for success on the ice.
+                </p>
+            </div>
+
+            <!--card grid -->
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-5 pt-10 p-10 pb-4 ">
+                <!-- 1 -->
+                <div class="col-span-1">
+                    <div class="card bg-base-100 shadow-xl image-full">
+                        <figure><img class="" src="Images/2.png" alt="" /></figure>
+                        <div class="card-body">
+                            <h2 class="card-title text-white pt-10 lg:pt-20">Junior Program</h2>
+                            <p class="text-white">Junior programs offer structured activities for youth, fostering
+                                skill
+                                development, personal
+                                growth, and social interaction.</p>
+                            <div class="card-actions justify-start pb-6">
+                                <button
+                                    class=" btn hover:bg-[#FF4240] text-white text-xl border-none bg-[#FF4240]">Register
+                                    Now!</button>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <!-- 2 -->
+                <div class="">
+                    <div class="card  bg-base-100 shadow-xl image-full">
+                        <figure><img class="" src="Images/3.png" alt="" /></figure>
+                        <div class="card-body">
+                            <h2 class="card-title text-white pt-10 lg:pt-20">Teenager Program</h2>
+                            <p class="text-white">Junior programs offer structured activities for youth, fostering
+                                skill
+                                development, personal
+                                growth, and social interaction.</p>
+                            <div class="card-actions justify-start pb-6">
+                                <button
+                                    class=" btn hover:bg-[#FF4240] text-white text-xl border-none bg-[#FF4240]">Register
+                                    Now!</button>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <!-- 3 -->
+            <div class="grid grid-cols-1 px-10 lg:px-0">
+                <div class="lg:px-10 pt-0">
+                    <div class="card bg-base-100 shadow-xl image-full">
+                        <figure><img class="" src="Images/4.png" alt="" /></figure>
+                        <div class="card-body">
+                            <h2 class="card-title text-white pt-10 lg:pt-44">Professional Program</h2>
+                            <p class="text-white lg:w-96">Junior programs offer structured activities for youth,
+                                fostering
+                                skill
+                                development, personal
+                                growth, and social interaction.</p>
+                            <div class="card-actions justify-start pb-6">
+                                <button
+                                    class=" btn hover:bg-[#FF4240] text-white text-xl border-none bg-[#FF4240]">Register
+                                    Now!</button>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+
+
+        </section>
     </main>
     <footer></footer>
 </body>
