add products section

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-5 pt-10 p-10 pb-4 ">
                 <!-- 1 -->
                 <div class="col-span-1">
-                    <div class="card bg-base-100 shadow-xl image-full">
+                    <div class="card bg-base-100 shadow-sm image-full">
                         <figure><img class="" src="Images/2.png" alt="" /></figure>
                         <div class="card-body">
                             <h2 class="card-title text-white pt-10 lg:pt-20">Junior Program</h2>
@@ -226,7 +226,7 @@
                 </div>
                 <!-- 2 -->
                 <div class="">
-                    <div class="card  bg-base-100 shadow-xl image-full">
+                    <div class="card  bg-base-100 shadow-sm image-full">
                         <figure><img class="" src="Images/3.png" alt="" /></figure>
                         <div class="card-body">
                             <h2 class="card-title text-white pt-10 lg:pt-20">Teenager Program</h2>
@@ -247,7 +247,7 @@
             <!-- 3 -->
             <div class="grid grid-cols-1 px-10 lg:px-0">
                 <div class="lg:px-10 pt-0">
-                    <div class="card bg-base-100 shadow-xl image-full">
+                    <div class="card bg-base-100 shadow-sm image-full">
                         <figure><img class="" src="Images/4.png" alt="" /></figure>
                         <div class="card-body">
                             <h2 class="card-title text-white pt-10 lg:pt-44">Professional Program</h2>
@@ -269,6 +269,172 @@
 
 
 
+        </section>
+
+        <!-- products section -->
+        <section class="lg:mx-20 py-1 lg:py-14">
+            <div class="containar mx-auto px-26 w-3/4">
+                <h1 class="text-2xl lg:text-4xl font-bold text-center pb-6">
+                    Our New Products
+                </h1>
+                <p class="opacity-70 text-center">
+                    Our new products showcase innovative solutions designed to meet evolving needs, enhancing user
+                    experiences and providing cutting-edge functionalities for our customers.
+                </p>
+            </div>
+            <!-- cards -->
+            <div class="grid grid-cols-1 lg:grid-cols-2 lg:grid-rows-3 lg:py-10 gap-6 px-6 lg:px-0 py-6">
+                <!-- 1 -->
+                <div class="card lg:card-side border-2 border-slate-100 lg:px-7 p-4">
+                    <figure><img class="w-64 h-40 lg:h-52" src="Images/5.png" alt="" /></figure>
+                    <div class="card-body">
+                        <div class="flex gap-4">
+                            <div class="flex justify-start items-center gap-2">
+                                <img src="Images/Frame2.png" alt="">
+                                <img class="w-4 h-4" src="Images/5.0.png" alt="">
+                            </div>
+                            <div>
+                                <img src="Images/Group 34.png" alt="">
+                            </div>
+                            <div>
+                                <img src="Images/Group69.png" alt="">
+                            </div>
+                        </div>
+                        <h2 class="card-title text-1xl">World Cup Flags Football</h2>
+                        <p class="opacity-70">Click the button to listen on Spotiwhy app.</p>
+                        <div class="flex flex-row justify-start items-center   gap-3 ">
+                            <h2 class="flex justify-start  gap-10 text-[#FF4240]">Price - $22.00</h>
+                                <img class="flex w-20" src="Images/Group 35.png" alt="">
+
+                        </div>
+                    </div>
+                </div>
+                <!-- 2 -->
+                <div class="card lg:card-side border-2 border-slate-100 p-4 px-7">
+                    <figure><img class="w-64 h-48" src="Images/6.png" alt="" /></figure>
+                    <div class="card-body">
+                        <div class="flex gap-4">
+                            <div class="flex justify-start items-center gap-2">
+                                <img src="Images/Frame2.png" alt="">
+                                <img class="w-4 h-4" src="Images/5.0.png" alt="">
+                            </div>
+                            <div>
+                                <img src="Images/Group 34.png" alt="">
+                            </div>
+                            <div>
+                                <img src="Images/Group69.png" alt="">
+                            </div>
+                        </div>
+                        <h2 class="card-title text-1xl">World Cup Flags Football</h2>
+                        <p class="opacity-70">Click the button to listen on Spotiwhy app.</p>
+                        <div class="flex flex-row justify-start items-center  gap-3 ">
+                            <h2 class="flex justify-start gap-10 text-[#FF4240]">Price - $22.00</h>
+                                <img class="flex w-20" src="Images/Group 35.png" alt="">
+
+                        </div>
+                    </div>
+                </div>
+                <!-- 3 -->
+                <div class="card lg:card-side border-2 border-slate-100 p-4 px-7">
+                    <figure><img class="w-64 h-48" src="Images/7.png" alt="" /></figure>
+                    <div class="card-body">
+                        <div class="flex gap-4">
+                            <div class="flex justify-start items-center gap-2">
+                                <img src="Images/Frame2.png" alt="">
+                                <img class="w-4 h-4" src="Images/5.0.png" alt="">
+                            </div>
+                            <div>
+                                <img src="Images/Group 34.png" alt="">
+                            </div>
+                            <div>
+                                <img src="Images/Group69.png" alt="">
+                            </div>
+                        </div>
+                        <h2 class="card-title text-1xl">World Cup Flags Football</h2>
+                        <p class="opacity-70">Click the button to listen on Spotiwhy app.</p>
+                        <div class="flex flex-row justify-start items-center  gap-3 ">
+                            <h2 class="flex justify-start gap-10 text-[#FF4240]">Price - $22.00</h>
+                                <img class="flex w-20" src="Images/Group 35.png" alt="">
+
+                        </div>
+                    </div>
+                </div>
+                <!-- 4 -->
+                <div class="card lg:card-side border-2 border-slate-100 p-4 px-7">
+                    <figure><img class="w-64 h-48" src="Images/8.png" alt="" /></figure>
+                    <div class="card-body">
+                        <div class="flex gap-4">
+                            <div class="flex justify-start items-center gap-2">
+                                <img src="Images/Frame2.png" alt="">
+                                <img class="w-4 h-4" src="Images/5.0.png" alt="">
+                            </div>
+                            <div>
+                                <img src="Images/Group 34.png" alt="">
+                            </div>
+                            <div>
+                                <img src="Images/Group69.png" alt="">
+                            </div>
+                        </div>
+                        <h2 class="card-title text-1xl">World Cup Flags Football</h2>
+                        <p class="opacity-70">Click the button to listen on Spotiwhy app.</p>
+                        <div class="flex flex-row justify-start items-center  gap-3 ">
+                            <h2 class="flex justify-start gap-10 text-[#FF4240]">Price - $22.00</h>
+                                <img class="flex w-20" src="Images/Group 35.png" alt="">
+
+                        </div>
+                    </div>
+                </div>
+                <!-- 5 -->
+                <div class="card lg:card-side border-2 border-slate-100 p-4 px-7">
+                    <figure><img class="w-64 h-48" src="Images/9.png" alt="" /></figure>
+                    <div class="card-body">
+                        <div class="flex gap-4">
+                            <div class="flex justify-start items-center gap-2">
+                                <img src="Images/Frame2.png" alt="">
+                                <img class="w-4 h-4" src="Images/5.0.png" alt="">
+                            </div>
+                            <div>
+                                <img src="Images/Group 34.png" alt="">
+                            </div>
+                            <div>
+                                <img src="Images/Group69.png" alt="">
+                            </div>
+                        </div>
+                        <h2 class="card-title text-1xl">World Cup Flags Football</h2>
+                        <p class="opacity-70">Click the button to listen on Spotiwhy app.</p>
+                        <div class="flex flex-row justify-start items-center  gap-3 ">
+                            <h2 class="flex justify-start gap-10 text-[#FF4240]">Price - $22.00</h>
+                                <img class="flex w-20" src="Images/Group 35.png" alt="">
+
+                        </div>
+                    </div>
+                </div>
+                <!-- 6 -->
+                <div class="card lg:card-side border-2 border-slate-100 p-4 px-7">
+                    <figure><img class="w-64 h-48" src="Images/10.png" alt="" /></figure>
+                    <div class="card-body">
+                        <div class="flex gap-4">
+                            <div class="flex justify-start items-center gap-2">
+                                <img src="Images/Frame2.png" alt="">
+                                <img class="w-4 h-4" src="Images/5.0.png" alt="">
+                            </div>
+                            <div>
+                                <img src="Images/Group 34.png" alt="">
+                            </div>
+                            <div>
+                                <img src="Images/Group69.png" alt="">
+                            </div>
+                        </div>
+                        <h2 class="card-title text-1xl">World Cup Flags Football</h2>
+                        <p class="opacity-70">Click the button to listen on Spotiwhy app.</p>
+                        <div class="flex flex-row justify-start items-center  gap-3 ">
+                            <h2 class="flex justify-start gap-10 text-[rgb(255,66,64)]">Price - $22.00</h>
+                                <img class="flex w-20" src="Images/Group 35.png" alt="">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer></footer>
