add get in touch section

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         </section>
 
         <!-- professional section -->
-        <section class="lg:mx-20 py-14">
+        <section class="lg:mx-20 pt-14">
             <div class="containar mx-auto px-26 w-3/4">
                 <h1 class="text-2xl lg:text-4xl font-bold text-center pb-6">
                     Program Sections
@@ -272,7 +272,7 @@
         </section>
 
         <!-- products section -->
-        <section class="lg:mx-20 py-1 lg:py-14">
+        <section class="lg:mx-20 py-1 lg:pt-14">
             <div class="containar mx-auto px-26 w-3/4">
                 <h1 class="text-2xl lg:text-4xl font-bold text-center pb-6">
                     Our New Products
@@ -434,6 +434,45 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <!-- Get In Touch -->
+        <section class="lg:mx-20 py-1 lg:py-4">
+            <div class="containar mx-auto px-26 w-3/4 pb-8">
+                <h1 class="text-2xl lg:text-4xl font-bold text-center pb-6">
+                    Get In Touch
+                </h1>
+                <p class="opacity-70 text-center">
+                    Feel free to reach out to us for any inquiries, assistance, or collaborations; we're here to help
+                    and eager to connect with you.
+                </p>
+            </div>
+            <!-- grid -->
+            <div class="grid grid-cols-1 lg:grid-cols-3 py-8 p-6 lg:p-0">
+                <div class="col-span-1 border-2 border-slate-100 rounded-xl bg-white">
+                    <div class="">
+                        <!-- 1 -->
+                        <div class="bg-[#BCED6D1A] p-8 mx-10 my-10 rounded-xl">
+                            <img class="pb-8" src="Images/Group100.png" alt="">
+                            <img src="Images/PhoneNumber.png" alt="">
+
+                        </div>
+                        <!-- 2 -->
+                        <div class="bg-[#FDDD5F1A] p-8 mx-10 my-10 rounded-xl">
+                            <img class="pb-8" src="Images/Group200.png" alt="">
+                            <img src="Images/Email.png" alt="">
+
+                        </div>
+                        <!-- 3 -->
+                        <div class="bg-[#BCED6D1A] p-8 mx-10 my-10 rounded-xl">
+                            <img class="pb-8" src="Images/Group300.png" alt="">
+                            <img src="Images/Location.png" alt="">
+
+                        </div>
+                    </div>
+                </div>
+                <div></div>
             </div>
         </section>
     </main>
